recursion.lessons.recursion.dragoncurve.DragonCurve1.scala.error
DragonCurve1:8: error: ';' expected but ',' found.
		dragon(order - 1,((x + y + x2 - y2) / 2.), ((y + y2 - x2 + x) / 2.)),x2,y2)
                                                                                    ^